Add References section to index.html
Added a References section with academic contacts.

--- a/index.html
+++ b/index.html
@@ -157,8 +157,16 @@
       <p>Deep Learning, NLP, Large Language Models, AI in Education, Human–Computer Interaction, Data-driven Learning Systems</p>
     </section>
 
+    
+    <section>
+      <h2>References</h2>
+      <ul>
+        <li><strong>Prof. Dr. Bindu VR</strong><br>Hon. Director, School of Artificial Intelligence and Robotics<br>Mahatma Gandhi University, Kottayam<br><a href="mailto:binduvr@mgu.ac.in">binduvr@mgu.ac.in</a></li>
+        <li><strong>Dr. Deepa V</strong><br>Assistant Professor, School of Artificial Intelligence and Robotics<br>Mahatma Gandhi University, Kottayam<br><a href="mailto:deepav@mgu.ac.in">deepav@mgu.ac.in</a></li>
+      </ul>
+    </section>
+
     <footer>
-      <p>I Have No Enemies</p>
     </footer>
   </div>
 </body>
